--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,7 +1,7 @@
 <header class="hero-header">
     <title>Ice cream made with passion</title>
     <section class="hero-header__top header-top">
-        <div class="header-top__logo"><img class=header-top__img src="../src/images/logo 1.png"></div>
+        <div class="header-top__logo"><img class=header-top__img src="../src/images/logo 1.png" srcset="../src/images/logo 1x2.png 2x"></div>
         <ul class="hero-header__menu header-menu">
             <li class="header-menu__item"><a class="header-menu__anchor" href="#">Home</a></li>
             <li class="header-menu__item"><a class="header-menu__anchor" href="#">About us</a></li>
@@ -56,9 +56,9 @@
 
     <!-- imgs-->
     <section class="hero-header__images">
-        <div class="hero-header__icediv"><img class=header-bottom__icecream src="../src/images/lód-header.png"></div>
-        <div class="hero-header__milkdiv"><img class=header-bottom__milk src="../src/images/milk.png"></div>
-        <div class="hero-header__tastydiv"><img class=header-bottom__tasty src="../src/images/tasty.png"></div>
+        <div class="hero-header__icediv"><img class=header-bottom__icecream src="../src/images/lód-header.png" srcset="../src/images/lód-headerx2.png 2x"></div>
+        <div class="hero-header__milkdiv"><img class=header-bottom__milk src="../src/images/milk.png" srcset="../src/images/milkx2.png 2x"></div>
+        <div class="hero-header__tastydiv"><img class=header-bottom__tasty src="../src/images/tasty.png" srcset="../src/images/tastyx2.png 2x"></div>
     </section>
     <!-- imgs -->
     <div class="hero-header__span header-span">
