--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -264,20 +264,12 @@ body {
 
 @media screen and (min-width: 767px) {
   .hero-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: var(--product-pink);
     height: 399px;
     width: 100%;
   }
 }
 @media screen and (min-width: 1200px) {
   .hero-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: var(--product-pink);
     height: 665px;
     width: 100%;
   }
@@ -306,12 +298,8 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .header-top__logo {
-    width: 199px;
-    height: 50px;
     padding-left: 46px;
     padding-top: 37px;
-    position: relative;
-    z-index: 901;
   }
 }
 .header-menu {
@@ -363,17 +351,9 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .header-top__buy {
-    display: inline-block;
     width: 160px;
     height: 44px;
-    border-radius: 22px;
-    background-color: #fff;
-    border: none;
-    margin: 0 auto;
-    position: absolute;
-    top: 38px;
     right: 8%;
-    z-index: 900;
   }
 }
 .header-top__buylink {
@@ -428,27 +408,16 @@ body {
 
 @media screen and (min-width: 767px) {
   .header-topic__p {
-    font-family: "Titan One";
-    font-style: normal;
-    font-weight: 400;
     font-size: 22px;
     line-height: 30px;
-    color: #fff;
-    position: relative;
-    z-index: 903;
   }
 }
 @media screen and (min-width: 1200px) {
   .header-topic__p {
-    font-family: "Titan One";
-    font-style: normal;
-    font-weight: 400;
     font-size: 38px;
     line-height: 43.51px;
     letter-spacing: 4%;
     color: #fff;
-    position: relative;
-    z-index: 903;
   }
 }
 .header-topic__span {
@@ -464,44 +433,31 @@ body {
 
 @media screen and (min-width: 767px) {
   .header-topic__span {
-    font-family: "Titan One";
-    font-style: normal;
-    font-weight: 400;
     font-size: 34px;
     line-height: 30.77px;
     letter-spacing: 4%;
-    color: #D41443;
-    position: relative;
-    z-index: 903;
   }
 }
 @media screen and (min-width: 1200px) {
   .header-topic__span {
-    font-family: "Titan One";
-    font-style: normal;
-    font-weight: 400;
     font-size: 58px;
     line-height: 52.49px;
     letter-spacing: 4%;
     color: #D41443;
-    position: relative;
-    z-index: 903;
   }
 }
 .hero-header__buttons {
   position: relative;
-  bottom: 110px;
+  bottom: 150px;
 }
 
 @media screen and (min-width: 767px) {
   .hero-header__buttons {
-    position: relative;
     bottom: 65px;
   }
 }
 @media screen and (min-width: 1200px) {
   .hero-header__buttons {
-    position: relative;
     bottom: 30px;
     left: 95px;
   }
@@ -518,24 +474,15 @@ body {
 
 @media screen and (min-width: 767px) {
   .hero-button__product {
-    border-radius: 20px;
-    width: 61px;
-    height: 24px;
-    border: none;
-    margin-left: 20px;
-    position: relative;
-    z-index: 902;
+    margin-left: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
   .hero-button__product {
-    border-radius: 20px;
     width: 104px;
     height: 40px;
     border: none;
     margin-left: 20px;
-    position: relative;
-    z-index: 902;
   }
 }
 .hero-button__product:hover {
@@ -551,24 +498,10 @@ body {
   z-index: 903;
 }
 
-@media screen and (min-width: 767px) {
-  .hero-button__how {
-    border-radius: 20px;
-    width: 82px;
-    height: 24px;
-    border: none;
-    position: relative;
-    z-index: 903;
-  }
-}
 @media screen and (min-width: 1200px) {
   .hero-button__how {
-    border-radius: 20px;
     width: 138px;
     height: 40px;
-    border: none;
-    position: relative;
-    z-index: 903;
   }
 }
 .hero-button__how:hover {
@@ -591,38 +524,10 @@ body {
   height: 100%;
 }
 
-@media screen and (min-width: 767px) {
-  .hero-button__link {
-    font-family: "DM Sans";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 8px;
-    line-height: 10px;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: #D41443;
-    width: 100%;
-    height: 100%;
-  }
-}
 @media screen and (min-width: 1200px) {
   .hero-button__link {
-    font-family: "DM Sans";
-    font-style: normal;
-    font-weight: 400;
     font-size: 14px;
     line-height: 18px;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: #D41443;
-    width: 100%;
-    height: 100%;
   }
 }
 .hero-button__link:hover {
@@ -658,16 +563,10 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .header-eat__number {
-    font-family: "Titan One";
-    font-style: normal;
-    font-weight: 400;
     font-size: 46px;
     line-height: 52.67px;
     text-align: right;
     letter-spacing: 4%;
-    color: #D41443;
-    position: absolute;
-    z-index: 900;
     bottom: 370px;
     right: 100px;
     width: 54px;
@@ -700,17 +599,8 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .header-eat__span {
-    font-family: "DM Sans";
-    font-style: normal;
-    font-weight: 400;
     font-size: 14px;
     line-height: 18px;
-    letter-spacing: normal;
-    text-align: right;
-    color: #fff;
-    position: absolute;
-    left: 0;
-    width: 100%;
   }
 }
 @media screen and (min-width: 767px) {
@@ -723,16 +613,15 @@ body {
 @media screen and (min-width: 1200px) {
   .--trucks-span {
     width: 78px;
-    text-align: left;
     margin-left: -17px;
   }
 }
-.cafe-circle {
+.header-eat__cafecircle {
   display: none;
 }
 
 @media screen and (min-width: 767px) {
-  .cafe-circle {
+  .header-eat__cafecircle {
     position: absolute;
     top: 0px;
     right: -1vw;
@@ -741,22 +630,19 @@ body {
   }
 }
 @media screen and (min-width: 1200px) {
-  .cafe-circle {
-    position: absolute;
+  .header-eat__cafecircle {
     top: -10px;
     right: -1.5vw;
-    display: flex;
-    z-index: -1;
     width: 30px;
     height: 30px;
   }
 }
-.truck-circle {
+.headet-eat__truckcircle {
   display: none;
 }
 
 @media screen and (min-width: 767px) {
-  .truck-circle {
+  .header-eat__truckcircle {
     position: absolute;
     top: 0px;
     right: -1vw;
@@ -765,12 +651,9 @@ body {
   }
 }
 @media screen and (min-width: 1200px) {
-  .truck-circle {
-    position: absolute;
+  .header-eat__truckcircle {
     top: -10px;
     right: -1.5vw;
-    display: flex;
-    z-index: -1;
     width: 30px;
   }
 }
@@ -779,6 +662,17 @@ body {
   position: absolute;
 }
 
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero-header__icediv {
+    position: relative;
+    background-image: url("/images/elipse-mobile.png");
+    background-size: 344px;
+    background-repeat: no-repeat;
+    width: calc(100% - 30vw);
+    top: 100px;
+    left: 30vw;
+  }
+}
 .hero-header__icediv {
   position: relative;
   background-image: url("/images/elipse-mobile.png");
@@ -792,9 +686,7 @@ body {
 @media screen and (min-width: 767px) {
   .hero-header__icediv {
     position: absolute;
-    background-image: url("/images/elipse-mobile.png");
     background-size: 324px;
-    background-repeat: no-repeat;
     width: 50vw;
     top: 30px;
     left: 40vw;
@@ -803,9 +695,7 @@ body {
 @media screen and (min-width: 1200px) {
   .hero-header__icediv {
     position: absolute;
-    background-image: url("/images/elipse-mobile.png");
     background-size: 538px;
-    background-repeat: no-repeat;
     width: 50vw;
     height: 538px;
     top: 70px;
@@ -869,6 +759,24 @@ body {
     height: 191px;
   }
 }
+.header-span__arrow {
+  display: none;
+}
+
+@media screen and (min-width: 767px) {
+  .header-span__arrow {
+    display: flex;
+    position: relative;
+    top: 315px;
+    left: 14.25vw;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-span__arrow {
+    top: 525px;
+    margin-left: 60px;
+  }
+}
 .hero-header__tastydiv {
   display: none;
 }
@@ -930,39 +838,12 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .header-span__lorem {
-    display: flex;
-    text-align: left;
     margin-left: 60px;
     top: 510px;
     width: 200px;
     height: 78px;
-    position: relative;
-    font-family: "DM Sans";
-    font-style: normal;
-    font-weight: 400;
     font-size: 14px;
     line-height: 140%;
-    color: #fff;
-  }
-}
-.header-span__arrow {
-  display: none;
-}
-
-@media screen and (min-width: 767px) {
-  .header-span__arrow {
-    display: flex;
-    position: relative;
-    top: 315px;
-    left: 14.25vw;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .header-span__arrow {
-    display: flex;
-    position: relative;
-    top: 525px;
-    margin-left: 60px;
   }
 }
 .nav-container {
