--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,7 +1,7 @@
 <header class="hero-header">
     <title>Ice cream made with passion</title>
     <section class="hero-header__top header-top">
-        <div class="header-top__logo"><img class=header-top__img src="../src/images/logo 1.png" srcset="../src/images/logo 1x2.png 2x"></div>
+        <div class="header-top__logo"><img class=header-top__img src="../src/images/logo 1.png" srcset="M:\programy\Programy_kodowanie\github\parcel-project-template-pl\grupa-7\src\images\logo 1x2.png 2x" ></div>
         <ul class="hero-header__menu header-menu">
             <li class="header-menu__item"><a class="header-menu__anchor" href="#">Home</a></li>
             <li class="header-menu__item"><a class="header-menu__anchor" href="#">About us</a></li>
