--- a/src/sass/components/_contacts-list.scss
+++ b/src/sass/components/_contacts-list.scss
@@ -1,14 +1,14 @@
 .contacts {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-content: center;
-  flex-direction: column;
+
   &__list {
     width: 220px;
     background-color: #ffff;
     box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
     border-radius: 24px;
-    margin-bottom: 20px;
+    margin: 0 auto;
   }
   &__header-cafe {
     display: flex;
@@ -91,5 +91,33 @@
     line-height: 186%;
     color: #ffa5ba;
     margin-bottom: 10px;
+  }
+  &__adress {
+    display: block;
+    margin-top: 25px;
+    margin-left: 20px;
+    padding-bottom: 45px;
+  }
+  &__adress-data {
+    text-decoration: none;
+    font-family: 'DM Sans';
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.5;
+    color: #907e82;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contacts {
+    flex-direction: column;
+    row-gap: 20px;
+    width: 100%;
+    background-color: #fff5f6;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts {
+    flex-direction: row;
   }
 }
