--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,18 +1,17 @@
 .container {
-    padding: 0px 20px;
-    margin: 0 auto;
-    width: 100%;
+  min-width: 320px;
+  margin: 0 auto;
+  width: 100%;
 
-    @media screen and (min-width: 480px) {
-        width: 480px;
-    }
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+  }
 
-    @media screen and (min-width: 768px) {
-        width: 768px;
-    }
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
 
-    @media screen and (min-width: 1200px) {
-        width: 100%;
-        max-width: 1200px;
-    }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
 }
