--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -11,7 +11,7 @@
             srcset="
             ./images/pink.320px.1x.png 450w,
             ./images/pink.320px.2x.png 900w,
-            ./images/pink.768px.1x.png 354,
+            ./images/pink.768px.1x.png 354w,
             ./images/pink.768px.2x.png 708w,
             ./images/pink.1200px.1x.png 270w,
             ./images/pink1200px2x.png 520w
@@ -32,7 +32,7 @@
             srcset="
             ./images/yellow.320px1x.png 450w,
             ./images/yellow.320px2x.png 900w,
-            ./images/yellow.768px.1x.png 354,
+            ./images/yellow.768px.1x.png 354w,
             ./images/yellow.768px.2x..png 708w,
             ./images/yellow.1200px.1x.png 270w,
             ./images/yellow.1200px.2x.png 520w
@@ -53,7 +53,7 @@
             srcset="
             ./images/green.320px1x.png 450w,
             ./images/green.320px2x.png 900w,
-            ./images/green.768px1x.png 354,
+            ./images/green.768px1x.png 354w,
             ./images/green.768px2x.png 708w,
             ./images/green.1200px.1x.png 270w,
             ./images/green.1200px.2x.png 520w
@@ -63,7 +63,7 @@
             </div>
       <p class="product-item__heading"><b> MILKSHAKES</b></p>
       <p class="product-item__heading"><b> ...</b></p>
-       <p class="product-item__paragraf">Lorem ipsum dolor sit amet,consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et </p>
+       <p class="product-item__paragraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
        <img class="product_radius" src="./images/strzałka.jpg">
     </div>
     </li>
