--- a/src/sass/products/_products-list.scss
+++ b/src/sass/products/_products-list.scss
@@ -1,11 +1,8 @@
 .product-square__item {
-
   width: 100%;
   height: 485px;
   border-radius: 24px;
   margin-top: 143px;
-  
-
 }
 .--product-pink {
   background-color: var(--product-pink);
@@ -16,19 +13,14 @@
 .--product-green {
   background-color: var(--product-green);
 }
-.product__item {
-  // padding-left: 20px;
-  // padding-right: 20px;
-  display: flex;
-  width: 100%;
-}
+
 
 .product-foto__heading {
   opacity: 0;
 }
 
 .product-item__heading {
-  font-family: "Titan One";
+  font-family: 'Titan One';
   font-weight: 400;
   font-size: 20px;
   line-height: 22.9px;
@@ -39,7 +31,7 @@
 }
 
 .product-item__paragraf {
-  font-family: "DM Sans";
+  font-family: 'DM Sans';
   font-weight: 700;
   font-size: 14px;
   line-height: 21.28px;
@@ -48,47 +40,123 @@
   color: var(--text-color);
 }
 
-  .product-margin_pic{
-   
-    margin-top: -158px;
+.product-margin_pic {
+  margin-top: -158px;
+  padding-top: 31px;
+  // margin-left: 15px;
+  // margin-right: 15px;
+  width: 100%;
+  margin-bottom: 31px;
+}
+.test {
+  display: flex;
+  justify-content: center;
+}
+.product_radius {
+  border-radius: 50%;
+  margin-top: 41px;
+  margin-bottom: 41px;
+  margin-left: 120px;
+  margin-right: 120px;
+  display: flex;
+}
+@media screen and (min-width:340px) and (max-width: 768px) {
+  .product__item {
+    // padding-left: 20px;
+    // padding-right: 20px;
+    display: flex;
+    // width: 100%;
+    width: 280px;
+    margin:0 auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .product__list {
+    display: flex;
+    justify-content: space-between;
+    width: 768px;
+    gap: 20px;
+    // margin: 0 auto;
+    // width: calc((100% - 30px) / 3);
+  }
+  .product__item{
+   width: 220px;
+  }
+  .product_radius{
+    margin: 0 auto;
+  }
+  .product-item__paragraf {
+    font-family: 'DM Sans';
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24.64px;
+    letter-spacing: 4%;
+    text-align: center;
+    color: var(--text-color);
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .product__list {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 20px;
+    // width: calc((100% - 30px) / 3);
+    // width:1200px;
+    // padding-right: 117px;
+    // padding-left: 117px;
+  }
+  .product__item{
+    width: 329px;
+   }
+   .product-item__heading {
+    font-family: 'Titan One';
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34.35px;
+    letter-spacing: 4%;
+    text-align: center;
+    color: var(--text-color);
+    margin-bottom: 33px;
+  }
+  .product-item__paragraf {
+    font-family: 'DM Sans';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 28.16px;
+    letter-spacing: 4%;
+    text-align: center;
+    color: var(--text-color);
+    margin-bottom: 40px;
+  }
+  .product-square__item {
+    width: 350px;
+    height: 525px;
+    border-radius: 24px;
+    margin-top: 143px;
+  }
+
+  .product-item__heading {
+    font-family: 'Titan One';
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 34.35px;
+    letter-spacing: 4%;
+    text-align: center;
+    color: var(--text-color);
+    margin-bottom: 32px;
+  }
+  .product-margin_pic {
+    margin-top: -248px;
     padding-top: 31px;
     // margin-left: 15px;
     // margin-right: 15px;
     width: 100%;
     margin-bottom: 31px;
-
   }
-.test {
-  display: flex;
-  justify-content: center;
-}
-  .product_radius {
-    border-radius: 50%;
-    margin-top: 41px;
-    margin-bottom: 41px;
-    margin-left: 120px;
-    margin-right: 120px;
-    display: flex;
-    
-  
-     }
-
-    @media screen and (min-width: 768px) {
-      .product__list {
-         display: flex;
-        justify-content: space-between;
-        width: 100%;
-        gap: 20px;
-        width: calc((100% - 30px)/3);
-      }
+  .product_radius{
+    margin: 0 auto;
   }
-
-  @media screen and (min-width: 1200px) {
-    .product__list {
-       display: flex;
-      justify-content: space-between;
-      width: 100%;
-      gap: 20px;
-      width: calc((100% - 30px)/3);
-    }
 }
