--- a/src/sass/components/_contacts-list.scss
+++ b/src/sass/components/_contacts-list.scss
@@ -136,6 +136,8 @@
     flex-direction: row;
     width: 100%;
     background-color: #fff5f6;
+    background-image: url(../images/sectionbg_contacts.png);
+    background-position: contain;
     &__list {
       margin-top: -102px;
       width: 330px;
@@ -166,6 +168,29 @@
       font-size: 16px;
     }
     &__description {
+      font-size: 16px;
+    }
+    &__open {
+      width: 234px;
+      padding-bottom: 32px;
+      margin-left: 43px;
+      padding-top: 32px;
+    }
+    &__open-days {
+      font-size: 16px;
+    }
+    &__open-hours {
+      font-size: 16px;
+      margin-bottom: 15px;
+    }
+    &__adress {
+      display: flex;
+      flex-direction: column;
+      margin-top: 31px;
+      margin-left: 43px;
+      padding-bottom: 62px;
+    }
+    &__adress-data {
       font-size: 16px;
     }
   }
