--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -5,7 +5,7 @@
       <li class="advantages__item">
         <ul>
           <li>
-            <img src="/src/images/icon1bucket.png" alt="bucket" width="33" height="50" />
+            <img src="./images/icon1bucket.png" alt="bucket" width="33" height="50" />
           </li>
           <li class="advantages__numbers">721</li>
           <li class="advantages__text">
@@ -17,7 +17,7 @@
         <ul>
           <li>
             <img
-              src="/src/images/icon1bucketapple.png"
+              src="./images/icon1bucketapple.png"
               alt="bucket with apple"
               width="50"
               height="50"
@@ -32,7 +32,7 @@
       <li class="advantages__item">
         <ul>
           <li>
-            <img src="/src/images/icon1heart.png" alt="heart" width="44" height="50" />
+            <img src="./images/icon1heart.png" alt="heart" width="44" height="50" />
           </li>
           <li class="advantages__numbers">84</li>
           <li class="advantages__text">
