--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,6 +1,6 @@
-<section class="container">
+<section class="advantages__section">
   <h1 hidden>advantages</h1>
-  <div class="advantages">
+  <div class="advantages container">
     <ul class="advantages__list">
       <li class="advantages__item">
         <ul>
