--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -2,11 +2,16 @@
     background-color: #FFF5F6;
     padding-bottom: 59px;
     
+    
 }
 .advantages__list{
     display: block;
     margin-left: 20px;
 
+}
+.advantages__section{
+    background-color: #FFF5F6;
+    padding-top: 39px;
 }
 .advantages__numbers{
 font-family: 'Titan One';
