--- a/src/sass/components/_contacts-list.scss
+++ b/src/sass/components/_contacts-list.scss
@@ -112,6 +112,8 @@
   .contacts {
     flex-direction: column;
     row-gap: 104px;
+    width: 100%;
+    background-color: #fff5f6;
 
     &__list {
       margin-top: -84px;
@@ -121,7 +123,8 @@
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .contacts {
     flex-direction: row;
-
+    width: 100%;
+    background-color: #fff5f6;
     &__list {
       margin-top: -78px;
     }
@@ -131,7 +134,10 @@
 @media screen and (min-width: 1200px) {
   .contacts {
     flex-direction: row;
-
+    width: 100%;
+    background-color: #fff5f6;
+    background-image: url(../images/sectionbg_contacts.png);
+    background-position: contain;
     &__list {
       margin-top: -102px;
       width: 330px;
