--- a/src/sass/components/_contacts-buttons.scss
+++ b/src/sass/components/_contacts-buttons.scss
@@ -1,4 +1,5 @@
 .localisation-buttons {
+  background-color: #fff5f6;
   padding-top: 54px;
   padding-bottom: 113px;
   display: flex;
@@ -24,9 +25,6 @@
       color: #ffffff;
     }
   }
-}
-.localisation-button__icon {
-  fill: #d41342;
 }
 
 @media screen and (max-width: 767px) {
