--- a/src/sass/components/_contacts-buttons.scss
+++ b/src/sass/components/_contacts-buttons.scss
@@ -25,6 +25,16 @@
       color: #ffffff;
     }
   }
+  &__icon {
+    fill: #d41443;
+    margin-left: 13.5px;
+    transition: fill 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+
+    &:hover,
+    &:focus {
+      fill: #ffffff;
+    }
+  }
 }
 
 @media screen and (max-width: 767px) {
