--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -25,5 +25,7 @@
 @import './example';
 
 //Contacts
+@import './layout/contacts-section';
 @import './components/contacts-list';
 @import './components/contacts-buttons';
+@import './layout/footer-section';
