--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -29,3 +29,7 @@
 @import './components/contacts-list';
 @import './components/contacts-buttons';
 @import './layout/footer-section';
+@import './components/footer-title';
+@import './components/footer-social-links';
+@import './components/footer-contact';
+@import './components/footer-end';
