--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,21 +12,21 @@
           <li class="footer-social__icon">
             <a href="https://www.facebook.com" target="_blank">
               <svg class="footer-social__media-icon" width="9" height="19">
-                <use href="./images/icons.svg#icon-facebook"></use>
+                <use href="../images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="footer-social__icon">
             <a href="https://telegram.org" taget="_blank">
               <svg class="footer-social__media-icon" width="19" height="15">
-                <use href="./images/icons.svg#icon-telegram"></use>
+                <use href="../images/icons.svg#icon-telegram"></use>
               </svg>
             </a>
           </li>
           <li class="footer-social__icon">
             <a href="https://github.com" target="_blank">
               <svg class="footer-social__media-icon" width="19" height="19">
-                <use href="./images/icons.svg#icon-github"></use>
+                <use href="../images/icons.svg#icon-github"></use>
               </svg>
             </a>
           </li>
