--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,5 +1,6 @@
 :root {
     --main-color: #FFF5F;
+    --menu: #E18298;
     --product-pink: #FFB8CA;
     --product-yellow: #F0D1A5;
     --product-green: #C2E297;
