--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -64,13 +64,13 @@
       <button class="localisation-buttons__button" type="button">
         Our Locations
         <svg class="localisations-buttons__icon" width="5" height="8">
-          <use href="./src/images/icons.svg#icon-button-arrow"></use>
+          <use href="images/icons.svg#icon-button-arrow"></use>
         </svg>
       </button>
       <button class="localisation-buttons__button" type="button">
         Franchise
         <svg class="localisations-buttons__icon" width="5" height="8">
-          <use href="./src/images/icons.svg#icon-button-arrow"></use>
+          <use href="images/icons.svg#icon-button-arrow"></use>
         </svg>
       </button>
     </div>
