--- a/src/sass/components/_footer-contact.scss
+++ b/src/sass/components/_footer-contact.scss
@@ -1,6 +1,6 @@
 .footer-contact {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   font-family: 'DM Sans';
   font-weight: 700;
   line-height: 186%;
