--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -5,7 +5,7 @@
         <ul class="about__list">
             <li class="about__item">
                 <img class="about__img" src="imagescow-mobile-@1x-280x279.png"
-                    srcset="images/cow-mobile-@1x-280x279.png 280w, images/cow-mobile-@2x-560x558.png 560w, images\cow-tablet-@1x-340x339.png 340w, images\cow-tablet-@2x-680x768.png 680w, images/cow-desktop-@1x-516x516.png 516w, images/cow-desktop-@2x-1032x1032.png 1032w"
+                    srcset="images/cow-mobile-@1x-280x279.png 280w, images/cow-mobile-@2x-560x558.png 560w, images/cow-tablet-@1x-340x339.png 340w, images/cow-tablet-@2x-680x768.png 680w, images/cow-desktop-@1x-516x516.png 516w, images/cow-desktop-@2x-1032x1032.png 1032w"
                     alt="cow"
                     sizes="(min-width: 1200px) 516px, (min-width: 768px) 340px, (min-width: 200px) 280px" />
             </li>
