--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -4,8 +4,8 @@
         <h2 class="about__title">how it&#8217;s made?</h2>
         <ul class="about__list">
             <li class="about__item">
-                <img class="about__img" src="imagescow-mobile-@1x-280x279.png"
-                    srcset="images/cow-mobile-@1x-280x279.png 280w, images/cow-mobile-@2x-560x558.png 560w, images/cow-tablet-@1x-340x339.png 340w, images/cow-tablet-@2x-680x768.png 680w, images/cow-desktop-@1x-516x516.png 516w, images/cow-desktop-@2x-1032x1032.png 1032w"
+                <img class="about__img" src="images/about/cow-mobile-@1x-280x279.png"
+                    srcset="images/about/cow-mobile-@1x-280x279.png 280w, images/about/cow-mobile-@2x-560x558.png 560w, images/about/cow-tablet-@1x-340x339.png 340w, images/about/cow-tablet-@2x-680x768.png 680w, images/about/cow-desktop-@1x-516x516.png 516w, images/about/cow-desktop-@2x-1032x1032.png 1032w"
                     alt="cow"
                     sizes="(min-width: 1200px) 516px, (min-width: 768px) 340px, (min-width: 200px) 280px" />
             </li>
@@ -35,13 +35,13 @@
         </ul>
         <div>
             <img
-            class="about__milk" src="images/milk-mobile-@1x-320x133.png"
+            class="about__milk" src="images/about/milk-mobile-@1x-320x133.png"
             alt="milk"
             >
         </div>
         <div>
             <img
-            class="about__milk--desktop" src="images/milk-desktop-@1x-1282x534.png"
+            class="about__milk--desktop" src="images/about/milk-desktop-@1x-1282x534.png"
             alt="milk"
             >
         </div>
