--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -1,20 +1,33 @@
 .slick__container {
+  @media screen and (min-width: 768px) {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
 
+  @media screen and (min-width: 1200px) {
+    padding-left: 63px;
+    padding-right: 61px;
+  }
 }
 
 .slick {
   padding-top: 80px;
   background-color: #ffffff;
 
+  @media screen and (min-width: 768px) {
+    padding-top: 121px;
+  }
 
+  @media screen and (min-width: 1200px) {
+    padding-top: 123px;
+  }
 }
 
 .slick__text {
   position: relative;
-
   z-index: 2;
 
-  font-family: 'DM Sans',sans-serif;
+  font-family: 'DM Sans', sans-serif;
   font-weight: 500;
   font-size: 12px;
   line-height: 2.58;
@@ -23,36 +36,81 @@
   text-align: center;
   letter-spacing: 0.04em;
 
-  background-image: repeating-linear-gradient(
-    to top,
-    #e1e1e1,
-    #e1e1e1 1px,
-    #fafafa 1px,
-    #fafafa 31px
-  );
+  background-image: repeating-linear-gradient(to top,
+      #e1e1e1,
+      #e1e1e1 1px,
+      #fafafa 1px,
+      #fafafa 31px);
 
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 2.14;
+
+    background-image: repeating-linear-gradient(to top,
+        #e1e1e1,
+        #e1e1e1 1px,
+        #fafafa 1px,
+        #fafafa 30px);
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 1.88;
+
+    background-image: repeating-linear-gradient(to top,
+        #e1e1e1,
+        #e1e1e1 1px,
+        #fafafa 1px,
+        #fafafa 30.5px);
+  }
 }
+
 .slick__text::before {
   content: '';
 
   position: absolute;
   top: -14px;
   left: -32px;
+
   width: 54px;
   height: 40px;
+
   background-image: url(../images/slider/“.svg);
+
   z-index: -1;
 
+  @media screen and (min-width: 768px) {
+    top: -16px;
+    left: -31px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    top: -14px;
+    left: -38px;
+  }
 }
+
 .slick__text::after {
   content: '';
 
   position: absolute;
   bottom: -48px;
-  left: 48%;
+  left: 39%;
+
   width: 32px;
   height: 4px;
+
   background-image: url(../images/slider/dots.svg);
+
+  @media screen and (min-width: 768px) {
+    top: 135px;
+    left: 44%;
+  }
+
+  @media screen and (min-width: 1200px) {
+    top: 120px;
+    left: 47%;
+  }
 }
 
 .slick__text-thumb {
@@ -63,8 +121,24 @@
   padding-bottom: 26px;
   padding-right: 50px;
   padding-left: 50px;
+
   background-color: #fafafa;
 
+  @media screen and (min-width: 768px) {
+    margin-bottom: 24px;
+    padding-top: 47px;
+    padding-bottom: 34px;
+    padding-right: 36px;
+    padding-left: 60px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 34px;
+    padding-top: 47px;
+    padding-bottom: 39px;
+    padding-right: 54px;
+    padding-left: 59px;
+  }
 }
 
 .slick__image {
@@ -75,6 +149,13 @@
   width: 85px;
   height: 85px;
 
+  @media screen and (min-width: 768px) {
+    margin-bottom: 19px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 15px;
+  }
 }
 
 .slick__label {
@@ -82,7 +163,6 @@
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 30px;
-
   font-family: 'DM Sans',
     sans-serif;
   font-weight: 500;
@@ -91,10 +171,19 @@
   color: #000000;
   text-align: center;
 
+  @media screen and (min-width: 768px) {
+    margin-bottom: 35px;
+    font-size: 16px;
+    line-height: 1.88;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 20px;
+    line-height: 1.85;
+  }
 }
 
 // Slider styles //
-
 .slick-list {
   overflow: hidden;
 }
@@ -123,6 +212,7 @@
   border-radius: 50%;
   margin-right: 18px;
 }
+
 .slick__slider .slick-dots li.slick-active button {
   background-color: #d31342;
 }
@@ -131,6 +221,7 @@
   font-size: 0;
   width: 13px;
   height: 12px;
+
   background-image: url(../images/slider/home2.svg);
   background-size: cover;
   background-origin: padding-box;
@@ -143,6 +234,7 @@
   font-size: 0;
   width: 13px;
   height: 12px;
+
   background-image: url(../images/slider/home.svg);
   background-size: cover;
   background-origin: padding-box;
