--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="container ">
+<section class="container" id="products">
     <div>
    <h2 class="products-second__heading"> 100% NATURAL</h2>
     <h1 class="products-first__heading "> PRODUCTS</h1>
