--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -12,14 +12,17 @@
 
 .slick {
   padding-top: 80px;
+  padding-bottom: 170px;
   background-color: #ffffff;
 
   @media screen and (min-width: 768px) {
     padding-top: 121px;
+    padding-bottom: 197px;
   }
 
   @media screen and (min-width: 1200px) {
-    padding-top: 123px;
+    padding-top: 120px;
+    padding-bottom: 237px;
   }
 }
 
