--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,6 @@
 <section id="contacts" class="contacts-section">
   <div class="container">
-    <h2 class="contacts-title-hidden">Contacts</h2>
+    <h2 class="visually-hidden">Contacts</h2>
     <ul class="contacts">
       <li class="contacts__list">
         <span class="contacts__header-cafe">CAFE</span>
