--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -157,7 +157,7 @@
       width: 100%;
       position: absolute;
       left: 0;
-      bottom: 0px;
+      top: 2000px;
       max-height: 534px;
       z-index: 10;
   }
