--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -77,6 +77,7 @@
 
 @media screen and(min-width: 1200px) {
     .header-menu {
+        z-index: 2000;
         display: flex;
         justify-content: space-between;
         position: absolute;
@@ -124,6 +125,7 @@
 
 @media screen and(min-width: 1200px) {
     .header-top__buy {
+        z-index: 2001;
         width: 160px;
         height: 44px;
         right: 8%;
@@ -251,7 +253,7 @@
 
 @media screen and(min-width: 1200px) {
     .hero-header__buttons {
-        bottom: 30px;
+        top: 55px;
         left: 95px;
     }
 }
