--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -81,6 +81,7 @@
     padding-left: 37px;
     padding-right: 56px;
     margin-right: auto;
+    cursor: pointer;
   }
   .about__milk {
     width: 100%;
