--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages__section">
+<section class="advantages__section" id="how">
   <h1 hidden>advantages</h1>
   <div class="advantages container">
     <ul class="advantages__list">
