--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,15 +1,15 @@
-<header class="hero-header">
+<header class="hero-header" id="hero-header"">
     <title>Ice cream made with passion</title>
     <section class="hero-header__top header-top">
         <div class="header-top__logo">
             <img class="header-top__img" src="../src/images/logo 1.png" srcset="../src/images/logox2.png 2x">
         </div>
         <ul class="hero-header__menu header-menu">
-            <li class="header-menu__item"><a class="header-menu__anchor" href="#">Home</a></li>
-            <li class="header-menu__item"><a class="header-menu__anchor" href="#">About us</a></li>
-            <li class="header-menu__item"><a class="header-menu__anchor" href="#">How it's made?</a></li>
-            <li class="header-menu__item"><a class="header-menu__anchor" href="#">Our products</a></li>
-            <li class="header-menu__item"><a class="header-menu__anchor" href="#">Contact</a></li>
+            <li class="header-menu__item"><a class="header-menu__anchor" href="#hero-header">Home</a></li>
+            <li class="header-menu__item"><a class="header-menu__anchor" href="#about">About us</a></li>
+            <li class="header-menu__item"><a class="header-menu__anchor" href="#how">How it's made?</a></li>
+            <li class="header-menu__item"><a class="header-menu__anchor" href="#products">Our products</a></li>
+            <li class="header-menu__item"><a class="header-menu__anchor" href="#contacts">Contact</a></li>
         </ul>
         <!-- hamburger menu -->
         <div class="nav-container" tabindex="0">
@@ -17,11 +17,11 @@
             <ul class="nav-items">
                 <button class="nav-items__button"><a href="" class="nav-items__buy">Buy now <span
                             class="nav-items__marker">&gt;</span></a></button>
-                <li class="nav-item"><a class="nav-item__anchor" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-item__anchor" href="#">About us</a></li>
-                <li class="nav-item"><a class="nav-item__anchor" href="#">How it's made?</a></li>
-                <li class="nav-item"><a class="nav-item__anchor" href="#">Our products</a></li>
-                <li class="nav-item"><a class="nav-item__anchor" href="#">Contact</a></li>
+                <li class="nav-item"><a class="nav-item__anchor" href="#hero-header">Home</a></li>
+                <li class="nav-item"><a class="nav-item__anchor" href="#about">About us</a></li>
+                <li class="nav-item"><a class="nav-item__anchor" href="#how">How it's made?</a></li>
+                <li class="nav-item"><a class="nav-item__anchor" href="#products">Our products</a></li>
+                <li class="nav-item"><a class="nav-item__anchor" href="#contacts">Contact</a></li>
             </ul>
         </div>
         <!-- hamburger menu -->
