--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -17,7 +17,7 @@
             </a>
           </li>
           <li class="footer-social__icon">
-            <a href="https://telegram.org" taget="_blank">
+            <a href="https://telegram.org" target="_blank">
               <svg class="footer-social__media-icon" width="19" height="15">
                 <use href="images/icons.svg#icon-telegram"></use>
               </svg>
